[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/objects/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/placeholder/000.png" type="Texture" id=2]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://sprites/player/placeholder/007.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/placeholder/003.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/placeholder/001.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/placeholder/004.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/placeholder/005.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/placeholder/010.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/placeholder/012.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/placeholder/011.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/placeholder/014.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/placeholder/002.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/placeholder/021.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/placeholder/022.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/placeholder/023.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/placeholder/019.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/placeholder/020.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/placeholder/006.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/placeholder/017.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/placeholder/016.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/placeholder/018.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/placeholder/008.png" type="Texture" id=23]
[ext_resource path="res://sprites/player/placeholder/013.png" type="Texture" id=24]
[ext_resource path="res://sprites/player/placeholder/015.png" type="Texture" id=25]
[ext_resource path="res://sprites/player/placeholder/009.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 29.7723 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.16345, 26.0224 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11.5 )
scale = Vector2( 0.0893035, 0.0893035 )
frames = SubResource( 3 )
frame = 14
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="."]
visible = false
margin_left = -205.0
margin_top = -50.0
margin_right = 204.0
margin_bottom = -31.0
theme = ExtResource( 3 )
text = "state"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="dash_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="left_wall" type="Node2D" parent="."]

[node name="area_2d" type="Area2D" parent="left_wall"]
position = Vector2( -14, 0 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="left_wall/area_2d"]
shape = SubResource( 2 )

[node name="right_wall" type="Node2D" parent="."]

[node name="area_2d" type="Area2D" parent="right_wall"]
position = Vector2( 14, 0 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="right_wall/area_2d"]
shape = SubResource( 2 )
[connection signal="tree_entered" from="." to="." method="_on_player_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_player_tree_exited"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
